Finial Relative Layout

--- a/app/src/main/res/layout/activity_relative.xml
+++ b/app/src/main/res/layout/activity_relative.xml
@@ -5,9 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/white"
     tools:context=".relative">
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/back_ic"
